# nf-interpreter

./: .gitignore  CMakeLists.txt  azure-pipelines.yml  cmake-variants.TEMPLATE.json
CMake/: mBedOS.CMakeLists.cmake.in  toolchain.ChibiOS.GCC.cmake  toolchain.mBedOS.GCC.cmake
CMake/Modules/: FindMBEDOS.cmake  JSONParser.cmake
azure-pipelines-templates/: build-mbedos-targets.yml
src/CLR/Include/: nanoCLR_Runtime.h
src/HAL/Include/: nanoHAL_v2.h
targets/CMSIS-OS/ChibiOS/ST_STM32F769I_DISCOVERY/: CMakeLists.txt
targets/CMSIS-OS/mbedOS/: CMakeLists.txt
targets/CMSIS-OS/mbedOS/nanoclr/: CMakeLists.txt
targets/mbedOS/: CMakeLists.txt
